--- a/src/components/main/rightPanel/styles/TabFolderDetails.css
+++ b/src/components/main/rightPanel/styles/TabFolderDetails.css
@@ -34,9 +34,12 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  overflow: hidden;
 }
 
 .tab-folder-window-title {
+  display: flex;
+  flex-grow: 0;
   white-space: nowrap;
   overflow: hidden;
   color: var(--text-color);
